some contents to test

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -1,35 +1,61 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moi\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"moi\")"
+    "# Getting to know the key concepts and players\n",
+    "\n",
+    "In this course you will get to know the programming language **Python**. You will get to know the language up to a level where you will be able to write some scripts and run Python code as an executable program, or in a notebook environment.\n",
+    "\n",
+    "Since this is the preferred way for a majority of data scientists, and a convenient form for educational purposes, we will start off in a notebook setting. The document you are currently reading is a **Jupyter** notebook. A scientific notebook is an electronic  document used for **literate programming**. In literate programming, text, code, and its output (both textual and graphical) are combined."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a variable called `x` and assign the value 3.1415 to it. "
+    "## An example\n",
+    "\n",
+    "Suppose I want to calculate the surface of an equilateral triangle with side 3.\n",
+    "First I define the **variable** and assign an initial value to it. To inspect the value of a variable at any given time you can `print()` it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "side = 3\n",
+    "print(side)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The {{side}}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Key concepts of this tutorial (in order of appearance)\n",
+    "\n",
+    "- **Python** is a very popular _programming language_, praised for its ease of learning and use and applicability in a wide range of programming challenges.  \n",
+    "- **Jupyter** is a Notebook platform in which you do interactive _literate programming_. It supports Julia, Python and R.  \n",
+    "- **variable** is a program element that couples a name to a memory location with some contents."
+   ]
   }
  ],
  "metadata": {
