chapter 1 in draft

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting to know the key concepts and players\n",
+    "# Key concepts and players\n",
     "\n",
     "In this course you will get to know the programming language **Python**. You will get to know the language up to a level where you will be able to write some scripts and run Python code as an executable program, or in a notebook environment.\n",
     "\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,15 +39,15 @@
        "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "side = 3\n",
-    "print(side) # no need to explicitly print(); simply type the name of the variable you want to see:\n",
-    "side # in a Python program, this will not work without wrapping it in print()!"
+    "print(side) # no need to explicitly print(); simply type the name of the variable you want to see, if its the last statement in a cell\n",
+    "side # in a Python program, this will not work without wrapping it in a call to print()!"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "'The area of a equilateral triangles with side 3 is 4.5'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,20 +86,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `*` and `**` symbols in the above code cell are called **(mathematical) operators** for multiplication and power, respectively. They _operate_ on _operands_ that are usually on both side of the operator. Any combination of operator and operands is an _expression_ that evaluates to a result.  \n",
-    "Other mathematical operators are, not surprisingle, minus (`-`), plus (`+`), division (`/`) and "
+    "The `*` and `**` symbols in the above code cell are called **(mathematical) operators** for multiplication and exponentiation, respectively. They _operate_ on _operands_ that are usually on both side of the operator. Any combination of operator and operands is an _expression_ that evaluates to a result.  \n",
+    "\n",
+    "Other mathematical operators are, not surprisingle, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. We'll encounter them later on."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Key concepts of this tutorial\n",
+    "Now I want to do the same calculation and reporting for other triangles. I could just copy-and-paste all code, as in the cell below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of a equilateral triangles with side 4 is 8.0\n",
+      "The area of a equilateral triangles with side 2.21 is 2.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "side = 4\n",
+    "area =  0.5 * side**2\n",
     "\n",
-    "- **Jupyter** is a Notebook platform in which you do interactive _literate programming_. It supports Julia, Python and R.  \n",
+    "print(f'The area of a equilateral triangles with side {side} is {area}') \n",
+    "\n",
+    "side = 2.21\n",
+    "area =  0.5 * side**2\n",
+    "\n",
+    "print(f'The area of a equilateral triangles with side {side} is {round(area, 2)}') #note the use of round()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is awful!  \n",
+    "Copy-and-paste activities are a real no-no in programming. Whenever you catch yourself doing it, stop and consider a better way to do it. In the vast majority of cases this will result in extracting the copied code into a **function**.  \n",
+    "A function is a chunk of code that you can re-use, rather than copying it multiple times. \n",
+    "\n",
+    "Below, the re-used piece of code is embedded in the function `triangle_area()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_triangle_area(side):\n",
+    "    area =  0.5 * side**2\n",
+    "    print(f'The area of an equilateral triangle with side {side} is {round(area, 2)}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll visit the theory and practice of functions in a later chapter. Suffice to know here is that a named piece of code has been defined which can be used by that name when it is also given a value for its input argument, `side`.  \n",
+    "\n",
+    "With this function defined (and loaded) it is easy to repeat the operation for a series of values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of an equilateral triangle with side 3 is 4.5\n",
+      "The area of an equilateral triangle with side 4 is 8.0\n",
+      "The area of an equilateral triangle with side 2.21 is 2.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_triangle_area(3)\n",
+    "print_triangle_area(4)\n",
+    "print_triangle_area(2.21)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But wait! There is still copied code. Taking a leap forward in Python programming concepts - the `for` loop, here is an even better way to do it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of an equilateral triangle with side 3 is 4.5\n",
+      "The area of an equilateral triangle with side 4 is 8.0\n",
+      "The area of an equilateral triangle with side 2.21 is 2.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "sides = [3, 4, 2.21] # a list of values\n",
+    "for n in sides:\n",
+    "    print_triangle_area(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `for` loop _iterates_ an iterable (a collection of values) and performs the given block for each of the values. We call this type of construct a **flow control** element because it controls the flow of the program.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Key concepts\n",
+    "\n",
+    "- **flow control**: programming elements that control the flow of a program. Flow control elements are used for iteration and conditional execution.\n",
+    "- **function**: A function is a chunk of code (usually named) that you can re-use, rather than copying it multiple times. Functions enable programmers to break down a problem into smaller pieces, each of which performs a particular task.\n",
+    "- **Jupyter**: a Notebook platform in which you do interactive _literate programming_. It supports Julia, Python and R.  \n",
     "- **Markdown**: Markdown is a lightweight markup language that you can use to add formatting elements to plaintext text documents. It is used in a wide range of settings: Jupyter Notebooks, R Markdown, eBook authoring etcetera.\n",
-    "- **Python** is a very popular _programming language_, praised for its ease of learning and use and applicability in a wide range of programming challenges.  \n",
-    "- **variable** is a program element that couples a name to a memory location with some contents."
+    "- **operator**: a symbol that operates on operands, usually on both sides, together forming an expression.\n",
+    "- **Python**: a very popular _programming language_, praised for its ease of learning and use and applicability in a wide range of programming challenges.  \n",
+    "- **variable**: a program element that couples a name to a memory location with some contents."
    ]
   }
  ],
