Chapter 1 extended with exercises

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -32,22 +32,11 @@
      "text": [
       "3\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "side = 3\n",
-    "print(side) # no need to explicitly print(); simply type the name of the variable you want to see, if its the last statement in a cell\n",
-    "side # in a Python program, this will not work without wrapping it in a call to print()!"
+    "print(side) # print the side"
    ]
   },
   {
@@ -56,6 +45,8 @@
    "source": [
     "Note the use of `#text` to add human-readable comments to the code. Everything after `#` will be ignored when evaluating the cell.\n",
     "\n",
+    "`print()` is a **function** that can be used to display text on the console (or in a notebook).\n",
+    "If it is the last statement in a notebook cell, you can simply type the name of the variable you want to see without wrapping it in a call to print().\n",
     "\n",
     "Next, I use the `side` variable to calculate the surface of a 3 - 3 - 3 triangle. The formula is $\\frac{1}{2} * width * height$, but since it is equilateral we can simply use $\\frac{1}{2} * side^2$"
    ]
@@ -130,8 +121,9 @@
    "source": [
     "This is awful!  \n",
     "\n",
-    "Copy-and-paste activities are a real no-no in programming. Whenever you catch yourself doing it, stop and consider a better way to do it. In the vast majority of cases this will result in extracting the copied code into a **function**.  \n",
-    "A function is a chunk of code that you can re-use, rather than copying it multiple times. \n",
+    "Copy-and-paste activities are a real no-no in programming. Whenever you catch yourself doing it, stop and consider a better way to do it. In the vast majority of cases this will result in extracting the copied code into a custom **function**.  \n",
+    "\n",
+    "A function is a chunk of code that you can re-use, rather than copying it multiple times. Many are already available within the Python programming language (e.g. `print()`), but you write them yourself all the time as well. \n",
     "\n",
     "Below, the re-used piece of code is embedded in the function `triangle_area()`."
    ]
@@ -216,8 +208,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# A real program\n",
+    "\n",
+    "By now you may be thinking that this does not look like programming at all. Where is the program?\n",
+    "Actually there is nog program here. A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database).\n",
+    "\n",
+    "Given the triangle example above, a standalone program for calculating and reporting triangle surface area would look like this:\n",
+    "\n",
+    "```python\n",
+    "'''This program calculates the surface of equilateral triangles with sides given on the command line.'''\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "def print_triangle_area(side):\n",
+    "    area =  0.5 * side**2\n",
+    "    print(f'The area of an equilateral triangle with side {side} is {round(area, 2)}')\n",
+    "\n",
+    "for arg in sys.argv[1:]:\n",
+    "    side = float(arg)\n",
+    "    print_triangle_area(side)\n",
+    "```\n",
+    "\n",
+    "Suppose this code is stored in a text file (e.g. 'triangle_surface.py') on your computer it could be run from a terminal or command prompt using the command \n",
+    "\n",
+    "```bash\n",
+    "> python3 triangle_surface.py 3 4 2.21\n",
+    "> The area of an equilateral triangle with side 3 is 4.5\n",
+    "> The area of an equilateral triangle with side 4 is 8.0\n",
+    "> The area of an equilateral triangle with side 2.21 is 2.44\n",
+    "```\n",
+    "\n",
+    "The code for this program can be found [here](./scripts/triangle_surface.py).  \n",
+    "\n",
+    "There are some elements that you probably don't understand yet:  \n",
+    "- `import sys` says \"load the functionality located in module sys and make it available here\". The functionality that is available by default in any Python program is rather limited to keep it lean. Any additional functionality must be loaded from modules using an **import statement** that you usually find at the top of a script or notebook. You will see many more modules if you continue with Python.\n",
+    "- `sys.argv` is the list of arguments entered on the command line, in this case `[\"triangle_surface.py\", \"3\", \"4\", \"2.21\"]`. We'll get to lists in the next chapter. \n",
+    "- `for arg in sys.argv[1:]:` this says: \"iterate the command-line arguments but skip the first\". Again, subject of a later chapter.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Excercises\n",
+    "\n",
+    "These assume that you already have Python3 installed on your device and is available from the Terminal (MacOS, Linux) or Command Prompt (Windows).\n",
+    "\n",
+    "1. In the Terminal, type `python3` (so without any argument). This starts an interactive Python session we call a REPL (for Read Evaluate Print Loop). Calculate the following \n",
+    "    - $\\frac{4.6 + 1.2}{2.09}$ \n",
+    "    - $3\\times4^\\frac{7}{12}$\n",
+    "\n",
+    "2. On your computer, create a folder that will hold the exercises of this course. In it, create a copy of the above script `triangle_surface.py`. Run the script.\n",
+    "3. Change the script at some points and investigate the effect:\n",
+    "    - comment-out (e.g. put a hash symbol `#` in front of it) the `import sys` statement\n",
+    "    - change `float(side)` to `int(side)`\n",
+    "    - change `sys.argv[1:]` to `sys.argv[2]` and to `sys.argv[2:]`\n",
+    "    - use your imagination and experiment further\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Key concepts\n",
     "\n",
+    "- **(computer) program**: a computer program is a sequence or set of instructions in a programming language that a computer (or other device) can execute or interpret.\n",
     "- **flow control**: programming elements that control the flow of a program. Flow control elements are used for iteration and conditional execution.\n",
     "- **function**: A function is a chunk of code (usually named) that you can re-use, rather than copying it multiple times. Functions enable programmers to break down a problem into smaller pieces, each of which performs a particular task.\n",
     "- **Jupyter**: a Notebook platform in which you do interactive _literate programming_. It supports Julia, Python and R.  \n",
