--- a/02_data_types.ipynb
+++ b/02_data_types.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "A scalar data type, or just **scalar**, is any non-composite value. Put differently, a scalar is a singular value. There are just a few different scalar values in Python to be found in the vast majority of Python code, and they are the same or at least similar across the vast majority of programming languages.\n",
     "\n",
-    "- **Numeric types**: \n",
-    "    - integer (`int`) e.g. `2`, `3`, `140000000198`\n",
-    "    - floating point numbers (`float`) e.g. `3.211`, `2.0`, `5E-5`\n",
+    "- **Numeric types** represent numbers and they come in two flavours; with and without decimal part. \n",
+    "    - integers have no decimal part (`int`) e.g. `2`, `3`, `140000000198`\n",
+    "    - floating point numbers do have a decimal part (`float`) e.g. `3.211`, `2.0`, `5E-5`\n",
     "- **Text**: aka string data (`str`) e.g. `\"It's a wonderful world\"` or `'What a challenge!'`\n",
     "- **Logical**: aka boolean (`bool`) with only two possible values: `True` and `False`\n",
     "\n",
@@ -59,7 +59,10 @@
    "metadata": {},
    "source": [
     "## Composite types\n",
-    "\n"
+    "\n",
+    "Composite types are exactly what their name implies; they are composed of other types (scalar or composite). The number of complex types in the base language is also limited, and again there are only a few that are used in the majority of cases.\n",
+    "\n",
+    "- **Sequence types** have elements in a specific order or sequence, and these can be addressed using the position of the element - its **index**."
    ]
   }
  ],
