--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Key concepts and players\n",
+    "# A quick overview\n",
     "\n",
     "In this course you will get to know the programming language **Python**. You will get to know the language up to a level where you will be able to write some scripts and run Python code as an executable program, or in a notebook environment.\n",
     "\n",
@@ -79,7 +79,9 @@
    "source": [
     "The `*` and `**` symbols in the above code cell are called **(mathematical) operators** for multiplication and exponentiation, respectively. They _operate_ on _operands_ that are usually on both side of the operator. Any combination of operator and operands is an _expression_ that evaluates to a result.  \n",
     "\n",
-    "Other mathematical operators are, not surprisingle, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. We'll encounter them later on."
+    "Other mathematical operators are, not surprisingle, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. We'll encounter these later on.\n",
+    "\n",
+    "The `f'  {}'` constructs is a string where we can insert values in."
    ]
   },
   {
@@ -255,10 +257,14 @@
     "\n",
     "These assume that you already have Python3 installed on your device and is available from the Terminal (MacOS, Linux) or Command Prompt (Windows).\n",
     "\n",
-    "1. In the Terminal, type `python3` (so without any argument). This starts an interactive Python session we call a REPL (for Read Evaluate Print Loop). Calculate the following \n",
+    "1. In the Terminal, type `python3` (so without any argument). This starts an interactive Python session we call a REPL (for Read Evaluate Print Loop). First enter `import math` and press enter to load the math module. Calculate the following (using `math.pi` and `math.sqrt()` where relevant).  \n",
+    "\n",
     "    - $\\frac{4.6 + 1.2}{2.09}$ \n",
     "    - $3\\times4^\\frac{7}{12}$\n",
-    "\n",
+    "    - $r = 6$ <br />\n",
+    "      $\\frac{2}{3}\\times \\pi r^3$  \n",
+    "    - $5 \\times (\\frac{4 + 2}{\\sqrt{7} \\times 9})$\n",
+    "  \n",
     "2. On your computer, create a folder that will hold the exercises of this course. In it, create a copy of the above script `triangle_surface.py`. Run the script.\n",
     "3. Change the script at some points and investigate the effect:\n",
     "    - comment-out (e.g. put a hash symbol `#` in front of it) the `import sys` statement\n",
@@ -276,6 +282,7 @@
     "- **(computer) program**: a computer program is a sequence or set of instructions in a programming language that a computer (or other device) can execute or interpret.\n",
     "- **flow control**: programming elements that control the flow of a program. Flow control elements are used for iteration and conditional execution.\n",
     "- **function**: A function is a chunk of code (usually named) that you can re-use, rather than copying it multiple times. Functions enable programmers to break down a problem into smaller pieces, each of which performs a particular task.\n",
+    "- **import**: A statement making functionality available that is not loaded by default.\n",
     "- **Jupyter**: a Notebook platform in which you do interactive _literate programming_. It supports Julia, Python and R.  \n",
     "- **Markdown**: Markdown is a lightweight markup language that you can use to add formatting elements to plaintext text documents. It is used in a wide range of settings: Jupyter Notebooks, R Markdown, eBook authoring etcetera.\n",
     "- **operator**: a symbol that operates on operands, usually on both sides, together forming an expression.\n",
