progress on 02 and operators

--- a/02_data_types.ipynb
+++ b/02_data_types.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Data types\n",
-    "In this chapter we'll explore the different base data types of Python, both **scalar** and **composite**.  \n",
-    "The main aspects of working with composite types are accessing its elements individually or iteratively.  "
+    "In this chapter we'll explore the different base data types of Python, both **scalar** and **collection**.  \n",
+    "The main aspects of working with collection types are accessing its elements individually or iteratively.  "
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "## Scalar types\n",
     "\n",
-    "A scalar data type, or just **scalar**, is any non-composite value. Put differently, a scalar is a singular value. There are just a few different scalar values in Python to be found in the vast majority of Python code, and they are the same or at least similar across the vast majority of programming languages.\n",
+    "A scalar data type, or just **scalar**, is any non-collection value. Put differently, a scalar is a singular value. There are just a few different scalar values in Python to be found in the vast majority of Python code, and they are the same or at least similar across the vast majority of programming languages.\n",
     "\n",
     "- **Numeric types** represent numbers and they come in two flavours; with and without decimal part. \n",
     "    - integers have no decimal part (`int`) e.g. `2`, `3`, `140000000198`\n",
@@ -128,16 +128,16 @@
    "metadata": {},
    "source": [
     "### Exercise\n",
-    "Try some conversions yourself. Figure out why some fail and some do not (sometimes where you expected it) and what the logic behind the conversion is."
+    "Try some conversions yourself. Figure out why some fail and some do not (sometimes where you expected it), what the result is and what the logic behind the conversion is. Especially conversions to `bool` are interesting and very relevant in `if <condition>:` blocks. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Composite types\n",
+    "## Collection types\n",
     "\n",
-    "Composite types are exactly what their name implies; they are composed of other types (scalar or composite). The number of complex types in the base language is limited, and there are only a few that are used in the majority of cases.\n",
+    "Collection types are exactly what their name implies; they are composed of other types (scalar or collection). The number of complex types in the base language is limited, and there are only a few that are used in the majority of cases.\n",
     "\n",
     "- **Sequence types** have elements in a specific order or sequence, and these can be addressed using the position of the element - its **index**.\n",
     "    - **list** In a list, order matters, and that is why you can fetch elements by their position, starting at zero. Lists can change: you can add and delete elements.\n",
@@ -319,6 +319,26 @@
     "- split a sentence in a list of separate words\n",
     "- get a random number between 1 and 100\n",
     "- round a number to 2 decimals\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(4, 2), 3, 'A'}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set([3, \"A\", (4, 2)])\n"
    ]
   }
  ],
