--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -213,7 +213,7 @@
     "# A real program\n",
     "\n",
     "By now you may be thinking that this does not look like programming at all. Where is the program?\n",
-    "Actually there is nog program here. A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database).\n",
+    "Actually there is no program here. A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database).\n",
     "\n",
     "Given the triangle example above, a standalone program for calculating and reporting triangle surface area would look like this:\n",
     "\n",
@@ -231,22 +231,27 @@
     "    print_triangle_area(side)\n",
     "```\n",
     "\n",
-    "Suppose this code is stored in a text file (e.g. 'triangle_surface.py') on your computer it could be run from a terminal or command prompt using the command \n",
+    "Suppose this code is stored in a text file (e.g. 'triangle_surface.py') on your computer it could be run from a terminal (Linux or MacOS) or command prompt (Windows) using the command \n",
     "\n",
     "```bash\n",
     "> python3 triangle_surface.py 3 4 2.21\n",
-    "> The area of an equilateral triangle with side 3 is 4.5\n",
-    "> The area of an equilateral triangle with side 4 is 8.0\n",
-    "> The area of an equilateral triangle with side 2.21 is 2.44\n",
+    "The area of an equilateral triangle with side 3 is 4.5\n",
+    "The area of an equilateral triangle with side 4 is 8.0\n",
+    "The area of an equilateral triangle with side 2.21 is 2.44\n",
     "```\n",
     "\n",
-    "The code for this program can be found [here](./scripts/triangle_surface.py).  \n",
+    "The code for this program, which we usually call a **script** can be found [here](./scripts/triangle_surface.py).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are some elements that you may not understand yet:  \n",
     "\n",
-    "There are some elements that you probably don't understand yet:  \n",
     "- `import sys` says \"load the functionality located in module sys and make it available here\". The functionality that is available by default in any Python program is rather limited to keep it lean. Any additional functionality must be loaded from modules using an **import statement** that you usually find at the top of a script or notebook. You will see many more modules if you continue with Python.\n",
     "- `sys.argv` is the list of arguments entered on the command line, in this case `[\"triangle_surface.py\", \"3\", \"4\", \"2.21\"]`. We'll get to lists in the next chapter. \n",
-    "- `for arg in sys.argv[1:]:` this says: \"iterate the command-line arguments but skip the first\". Again, subject of a later chapter.\n",
-    "\n"
+    "- `for arg in sys.argv[1:]:` this says: \"iterate the command-line arguments but skip the first\". Again, subject of a later chapter."
    ]
   },
   {
@@ -257,7 +262,7 @@
     "\n",
     "These assume that you already have Python3 installed on your device and is available from the Terminal (MacOS, Linux) or Command Prompt (Windows).\n",
     "\n",
-    "1. In the Terminal, type `python3` (so without any argument). This starts an interactive Python session we call a REPL (for Read Evaluate Print Loop). First enter `import math` and press enter to load the math module. Calculate the following (using `math.pi` and `math.sqrt()` where relevant).  \n",
+    "1. In the Terminal or Command prompt, type `python3` (so without any argument). This starts an interactive Python session we call a REPL (for Read Evaluate Print Loop). First enter `import math` and press enter to load the math module. Calculate the following (using `math.pi` and `math.sqrt()` where relevant).  \n",
     "\n",
     "    - $\\frac{4.6 + 1.2}{2.09}$ \n",
     "    - $3\\times4^\\frac{7}{12}$\n",
@@ -265,7 +270,8 @@
     "      $\\frac{2}{3}\\times \\pi r^3$  \n",
     "    - $5 \\times (\\frac{4 + 2}{\\sqrt{7} \\times 9})$\n",
     "  \n",
-    "2. On your computer, create a folder that will hold the exercises of this course. In it, create a copy of the above script `triangle_surface.py`. Run the script.\n",
+    "2. On your computer, create a folder that will hold the exercises of this course. In it, put a copy of the above script `triangle_surface.py`. Run the script.\n",
+    "\n",
     "3. Change the script at some points and investigate the effect:\n",
     "    - comment-out (e.g. put a hash symbol `#` in front of it) the `import sys` statement\n",
     "    - change `float(side)` to `int(side)`\n",
@@ -287,6 +293,7 @@
     "- **Markdown**: Markdown is a lightweight markup language that you can use to add formatting elements to plaintext text documents. It is used in a wide range of settings: Jupyter Notebooks, R Markdown, eBook authoring etcetera.\n",
     "- **operator**: a symbol that operates on operands, usually on both sides, together forming an expression.\n",
     "- **Python**: a very popular _programming language_, praised for its ease of learning and use and applicability in a wide range of programming challenges.  \n",
+    "- **script**: a text file with computer code that can be executed as a program, usually by the _interpreter_ for the programming lanuage used.\n",
     "- **variable**: a program element that couples a name to a memory location with some contents."
    ]
   }
@@ -307,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
