--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -79,9 +79,9 @@
    "source": [
     "The `*` and `**` symbols in the above code cell are called **(mathematical) operators** for multiplication and exponentiation, respectively. They _operate_ on _operands_ that are usually on both side of the operator. Any combination of operator and operands is an _expression_ that evaluates to a result.  \n",
     "\n",
-    "Other mathematical operators are, not surprisingle, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. We'll encounter these later on.\n",
+    "Other mathematical operators are, not surprisingle, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. A complete listing of operators can be found [here](https://www.w3schools.com/python/python_operators.asp) or [here](https://www.tutorialspoint.com/python/python_basic_operators.htm).\n",
     "\n",
-    "The `f'  {}'` constructs is a string where we can insert values in."
+    "The `f'.....{}...'` construct is a string where we can insert values from python variables."
    ]
   },
   {
@@ -300,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +316,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
