test with 'details' tag

--- a/00_exercises.ipynb
+++ b/00_exercises.ipynb
@@ -321,18 +321,158 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 02 Data types\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Collections\n",
-    "\n"
+    "### 02.1 sets\n",
+    "\n",
+    "\n",
+    "Create a set named \"fruits_a\" that has the values 'apple', 'pear' and 'banana'. Create a second set, \"fruits_b\", that holds the values 'banana', 'guava' and 'orange'. Find the union, intersection and difference (both ways) between these sets.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
+    "  \n",
+    "```python\n",
+    "help(set)\n",
+    "```\n",
+    "\n",
+    "will calculate the yards from meters\n",
+    "</details>\n",
+    "\n",
+    "Next, study the docs and find out  \n",
+    "\n",
+    "- how to empty a set\n",
+    "- what the difference is between `discard()` and `remove()`\n",
+    "- how to find out whether one set is present within another set.\n",
+    "\n",
+    "Demonstrate all these with code examples.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.2 dict\n",
+    "\n",
+    "There are (at least) three ways to create and fill a dict. Use the suggested resources of chapter 1 to find them. Demonstrate these techniques to create this dict: `{513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}`.\n",
+    "<br><br>\n",
+    "\n",
+    "```python\n",
+    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
+    "```\n",
+    "<br><br>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
+    "  \n",
+    "```python\n",
+    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
+    "```\n",
+    "\n",
+    "As a literal.\n",
+    "</details>\n",
+    "\n",
+    "<br />\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me another hint!</summary>\n",
+    "  \n",
+    "```python\n",
+    "inventory = dict()\n",
+    "inventory[513] = 'hammer'\n",
+    "inventory[322] = 'screwdriver'\n",
+    "inventory[462] = 'nailgun'\n",
+    "```\n",
+    "\n",
+    "Using assignment of individual items.\n",
+    "</details>\n",
+    "\n",
+    "<br />\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the complete solution!</summary>\n",
+    "  \n",
+    "```python\n",
+    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
+    "print(inventory)\n",
+    "\n",
+    "inventory = dict()\n",
+    "inventory[513] = 'hammer'\n",
+    "inventory[322] = 'screwdriver'\n",
+    "inventory[462] = 'nailgun'\n",
+    "print(inventory)\n",
+    "\n",
+    "inventory = dict([[513, 'hammer'], [322, 'screwdriver'], [462, 'nailgun']])\n",
+    "print(inventory)\n",
+    "```\n",
+    "    \n",
+    "The third technique uses a list of 2-element-lists.\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.3 dict\n",
+    "\n",
+    "There are also several ways to make this.\n",
+    "<br><br>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
+    "  \n",
+    "```python\n",
+    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
+    "```\n",
+    "\n",
+    "As a literal.\n",
+    "</details>\n",
+    "\n",
+    "<br />\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me another hint!</summary>\n",
+    "  \n",
+    "```python\n",
+    "inventory = dict()\n",
+    "inventory[513] = 'hammer'\n",
+    "inventory[322] = 'screwdriver'\n",
+    "inventory[462] = 'nailgun'\n",
+    "```\n",
+    "\n",
+    "Using assignment of individual items.\n",
+    "</details>\n",
+    "\n",
+    "<br />\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the complete solution!</summary>\n",
+    "  \n",
+    "```python\n",
+    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
+    "print(inventory)\n",
+    "\n",
+    "inventory = dict()\n",
+    "inventory[513] = 'hammer'\n",
+    "inventory[322] = 'screwdriver'\n",
+    "inventory[462] = 'nailgun'\n",
+    "print(inventory)\n",
+    "\n",
+    "inventory = dict([[513, 'hammer'], [322, 'screwdriver'], [462, 'nailgun']])\n",
+    "print(inventory)\n",
+    "```\n",
+    "    \n",
+    "The third technique uses a list of 2-element-lists.\n",
+    "</details>\n"
    ]
   },
   {
